# duckdb

./: .travis.yml  CMakeLists.txt
benchmark/: CMakeLists.txt  benchmark_runner.cpp
benchmark/include/: benchmark_runner.hpp
benchmark/micro/: CMakeLists.txt  indexjoin.cpp
src/common/enums/: logical_operator_type.cpp
src/common/vector_operations/: null_operations.cpp
src/execution/: CMakeLists.txt  column_binding_resolver.cpp  physical_plan_generator.cpp
src/execution/index_join/: CMakeLists.txt  index_join.cpp
src/execution/nested_loop_join/: CMakeLists.txt
src/execution/physical_plan/: CMakeLists.txt  plan_comparison_join.cpp  plan_index_join.cpp
src/include/duckdb/planner/: binder.hpp  (+2 more)
src/optimizer/: CMakeLists.txt  filter_combiner.cpp  index_join.cpp  optimizer.cpp
src/optimizer/pushdown/: pushdown_mark_join.cpp
src/planner/expression_binder/: base_select_binder.cpp  where_binder.cpp
src/planner/filter/: null_filter.cpp
src/planner/logical_plan/: plan_subquery.cpp
src/planner/operator/: logical_filter.cpp  logical_index_join.cpp
src/storage/statistics/: base_statistics.cpp
src/storage/table/: column_segment.cpp  row_group.cpp  standard_column_data.cpp
test/monetdb/: test_leftjoin_bug.cpp
test/sql/collate/: collate_scalar_string_functions.test  collate_subquery.test
test/sql/index/: CMakeLists.txt  test_art_index.cpp  test_join_index.cpp
tools/: CMakeLists.txt
tools/odbc/: CMakeLists.txt  sqlite3odbc.c
tools/rpkg/R/: Connection.R  Result.R
tools/rpkg/src/: duckdbr.cpp
tools/sqlite3_api_wrapper/: sqlite3_api_wrapper.cpp
(+26 files in other folders)
